--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="impressum.html">Rudolfs Impressum</a></li>
-                <li><a href="bunnys.html">Rudolfs Lieblingshasen</a></li>
+                <li><a href="bunnys.html">Rudolfs Lieblingskaninchen</a></li>
                 <li><a href="weather.html">Rudolf geht raus</a></li>
             </nav>
         </div>    
