--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Inhalt -->
     <div class="container">
         <div class="content">
-            <h2>Rudolf wünscht frohe Weihnachten!</h2>
+            <h2>Rudolf wünscht euch frohe Weihnachten!</h2>
             <article>
                 <!-- Beinhaltet die gesamte Dokumentation -->
                 Hier muss Rudolfs Doku hin!
