--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <h2>Rudolf wünscht euch frohe Weihnachten!</h2>
             <article>
                 <!-- Beinhaltet die gesamte Dokumentation -->
-                Hier muss Rudolfs Doku hin!
             </article>
             <ul>
                 <!-- gewählten Aufgaben -->
                 <li><h4>Rudolfs gewählte Aufgaben</h4></li>
                 <li>jQuery Weather</li>
+                <li>jQuery Instagram</li>
                 <li>Weather Popup</li>
                 <li>Instagram Feed</li>
             </ul>
