--- a/weather.html
+++ b/weather.html
@@ -19,7 +19,7 @@
             <nav>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="impressum.html">Rudolfs Impressum</a></li>
-                <li><a href="bunnys.html">Rudolfs Lieblingshasen</a></li>
+                <li><a href="bunnys.html">Rudolfs Lieblingskaninchen</a></li>
                 <li><a href="weather.html">Rudolf geht raus</a></li>
             </nav>
         </div>    
@@ -45,8 +45,6 @@
             </div>
         </div>
     </div>
-
-    
 
     <!-- Antwort ausfüllen -->
     <script src="weather.js"></script>
