--- a/impressum.html
+++ b/impressum.html
@@ -18,7 +18,7 @@
             <nav>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="impressum.html">Rudolfs Impressum</a></li>
-                <li><a href="bunnys.html">Rudolfs Lieblingshasen</a></li>
+                <li><a href="bunnys.html">Rudolfs Lieblingskaninchen</a></li>
                 <li><a href="weather.html">Rudolf geht raus</a></li>
             </nav>
         </div>    
@@ -31,7 +31,8 @@
             <article>
                 <!-- Quellenangabe -->
                 <h3>Wetter-Api:</h3> https://openweathermap.org/
-               
+                <h3>Instagram-Api:</h3> Instagram: webengproject2020<br>
+                Copyright der Beiträge: office_rabbits - Sophie Eichhorn<br>
             </article>
             <ul>
                 <li>Matrikelnummer: 4249633</li>
