--- a/bunnys.html
+++ b/bunnys.html
@@ -28,7 +28,7 @@
     <!-- Inhalt -->
     <div class="container">
         <div class="content">
-            <h2>Rudolf hat beim Kaninchen Füttern ein paar Bilder gemacht!</h2>
+            <h2>Rudolf hat beim Kaninchen Füttern ein neues Bild gemacht!</h2>
         </div>
     </div>
 
@@ -45,10 +45,11 @@
 
     <div class="pictures">
         <img id="picinsta" src="#">  
-        <img id="picinstb" src="#">
-        <img id="picinstc" src="#">
+        <!-- <img id="picinstb" src="#">
+        <img id="picinstc" src="#"> -->
     </div>
 
+    <!-- Antwort ausfüllen -->
     <script src="bunnys.js"></script>
 
 </body>
