--- a/impressum.html
+++ b/impressum.html
@@ -33,6 +33,8 @@
                 <h3>Wetter-Api:</h3> https://openweathermap.org/
                 <h3>Instagram-Api:</h3> Instagram: webengproject2020<br>
                 Copyright der Beiträge: office_rabbits - Sophie Eichhorn<br>
+                <h3>Github:</h3> https://marissaeichhorn.github.io/index.html<br>
+                <h3>sonstige Quellen:</h3> https://developers.facebook.com/docs/instagram-basic-display-api/getting-started<br>
             </article>
             <ul>
                 <li>Matrikelnummer: 4249633</li>
