--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
     <div class="container">
         <div class="content">
             <h2>Rudolf wünscht euch frohe Weihnachten!</h2>
-            <article>
-                <!-- Beinhaltet die gesamte Dokumentation -->
-            </article>
             <ul>
                 <!-- gewählten Aufgaben -->
                 <li><h4>Rudolfs gewählte Aufgaben</h4></li>
@@ -39,6 +36,32 @@
                 <li>Weather Popup</li>
                 <li>Instagram Feed</li>
             </ul>
+
+            <article>
+                <!-- Beinhaltet die gesamte Dokumentation -->
+                <h3>Installationsbeschreibung</h3>
+                Es wurde Visual Studio Code mit folgenden Extensions verwendet:<br>
+                - "vscjava.vscode-java-debug"<br>
+                - "ritwickdey.liveserver"<br>
+                Außerdem wurde verwendet:<br>
+                - Dummy-Instagram-Account<br> 
+                - Facebook-Developer-Account<br>
+                - Github-Seite (mit Github Destop)<br>
+                <h3>Erfahrungsbericht:</h3>
+                Das Erstellen des Layouts mit Hilfe von CSS hat einwandfrei funktioniert. Für kompliertere Seiten, welche nicht im Rahmen einer Klausurarbeit erstellt wurden, würde ich in Zukunft jedoch das Frontend Framework "Bootstrap" verwenden.<br>
+                Bei dem Erstellen der Weather-Api stellte sich heraus, dass die vorgeschlagene "5 Day / 3 Hour Forecast"-Funktion von "https://openweathermap.org/api" nicht kostenlos verfügbar ist. Daher habe ich mich für den aktuellen Wetterbericht entschieden.
+                Um dennoch zu demonstrieren, dass ich in der Lage bin mehrere, voneinander teilweise unabhängige Dinge aus einer API einzubauen, besitzt die Datei "bunnys.js" eine auskommentierte Version zur Einbindung mehrerer verschiedener Dinge aus einer API.<br>
+                Das erstellen der Instagram-API ist mir zunächst sehr schwer gefallen, da ich eigentlich mir über diesen Weg die möglichen ZUsatzpunkte holen wollte. 
+                In diesem Zusammenhang wollte ich über die "Instagram Graph API" gehen. 
+                Diese erfordert jedoch neben einem Facebook-Developer-Account auch ein verifiziertes Unternehmen.
+                Zu dem Thema Instagram API lässt sich jedoch zusammenfassend sagen, dass es extrem aufwendig ist und für die meisten Anwendungsfälle auch eine unkomplizierte Methode über Instagram selber funktionieren würde.
+                Ich würde daher im Normalfall über die Option "Einbetten" gehen, welche Instagram selber zu jedem Beitrag zur Verfügung stellt, gehen.
+                In diesem Zusammenhang lässt sich noch erwähnen, dass ich das Logo der Webseite selber designen musste, da die Seite zwangsweise veröffentlicht werden musste zum einbinden der Instagram API. 
+                Aufrund der Veröffentlichung habe ich auch alle meine Quellen im Impressum angegeben.<br>
+                Das Verwenden vder JavaScript-Bibliothek "jQuery" hat einwandfrei funktioniert.
+                Ich würde diese jederzeit wieder verwenden.<br>
+                <br>
+            </article>
         </div>
     </div>
 </body>
