--- a/impressum.html
+++ b/impressum.html
@@ -3,7 +3,7 @@
 
 <head>
     <Meta chartset="UTF-8">
-    <title>Webengeneering I</title>
+    <title>Webengineering I</title>
     <link rel="stylesheet" href="indexstyle.css">
 </head>
 
