--- a/weather.html
+++ b/weather.html
@@ -4,7 +4,7 @@
 <head>
     <Meta chartset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Webengeneering I</title>
+    <title>Webengineering I</title>
     <link rel="stylesheet" href="weatherstyle.css">
 </head>
 
