--- a/index.html
+++ b/index.html
@@ -46,24 +46,27 @@
                 Außerdem wurde verwendet:<br>
                 - Dummy-Instagram-Account<br> 
                 - Facebook-Developer-Account<br>
-                - Github-Seite (mit Github Destop)<br>
+                - Github-Seite (mit Github Desktop)<br>
                 <h3>Erfahrungsbericht:</h3>
-                Das Erstellen des Layouts mit Hilfe von CSS hat einwandfrei funktioniert. Für kompliertere Seiten, welche nicht im Rahmen einer Klausurarbeit erstellt wurden, würde ich in Zukunft jedoch das Frontend Framework "Bootstrap" verwenden.<br>
-                Bei dem Erstellen der Weather-Api stellte sich heraus, dass die vorgeschlagene "5 Day / 3 Hour Forecast"-Funktion von "https://openweathermap.org/api" nicht kostenlos verfügbar ist. Daher habe ich mich für den aktuellen Wetterbericht entschieden.
-                Um dennoch zu demonstrieren, dass ich in der Lage bin mehrere, voneinander teilweise unabhängige Dinge aus einer API einzubauen, besitzt die Datei "bunnys.js" eine auskommentierte Version zur Einbindung mehrerer verschiedener Dinge aus einer API.<br>
-                Das erstellen der Instagram-API ist mir zunächst sehr schwer gefallen, da ich eigentlich mir über diesen Weg die möglichen ZUsatzpunkte holen wollte. 
-                In diesem Zusammenhang wollte ich über die "Instagram Graph API" gehen. 
-                Diese erfordert jedoch neben einem Facebook-Developer-Account auch ein verifiziertes Unternehmen.
-                Zu dem Thema Instagram API lässt sich jedoch zusammenfassend sagen, dass es extrem aufwendig ist und für die meisten Anwendungsfälle auch eine unkomplizierte Methode über Instagram selber funktionieren würde.
-                Ich würde daher im Normalfall über die Option "Einbetten" gehen, welche Instagram selber zu jedem Beitrag zur Verfügung stellt, gehen.
-                In diesem Zusammenhang lässt sich noch erwähnen, dass ich das Logo der Webseite selber designen musste, da die Seite zwangsweise veröffentlicht werden musste zum einbinden der Instagram API. 
-                Aufrund der Veröffentlichung habe ich auch alle meine Quellen im Impressum angegeben.<br>
-                Das Verwenden vder JavaScript-Bibliothek "jQuery" hat einwandfrei funktioniert.
-                Ich würde diese jederzeit wieder verwenden.<br>
+                Das Erstellen des Layouts mit Hilfe von CSS hat einwandfrei funktioniert. Für kompliziertere Seiten, welche nicht im Rahmen einer Klausurarbeit erstellt wurden, würde ich in Zukunft jedoch das Frontend Framework "Bootstrap" verwenden. Die Verwendung von "Bootstrap" würde auch das Erstellen einer funktionierenden Handyansicht erleichtern, welche ich zusätlich eingebaut habe.<br>
+                Bei dem Erstellen der Weather-Api stellte sich heraus, dass die vorgeschlagene "5 Day / 3 Hour Forecast"-Funktion von "https://openweathermap.org/api" nicht kostenlos verfügbar ist. Daher habe ich mich für den aktuellen Wetterbericht entschieden. Um dennoch zu demonstrieren, dass ich in der Lage bin mehrere, voneinander teilweise unabhängige Dinge aus einer API einzubauen, besitzt die Datei "bunnys.js" eine auskommentierte Version zur Einbindung verschiedener Dinge aus einer API.<br>
+                Das Erstellen der Instagram-API ist mir zunächst sehr schwer gefallen, da ich mir eigentlich über diesen Weg die möglichen Zusatzpunkte holen wollte. In diesem Zusammenhang wollte ich über die "Instagram Graph API" gehen. Diese erfordert jedoch neben einem Facebook-Developer-Account auch ein verifiziertes Unternehmen. Zu dem Thema Instagram-API lässt sich jedoch zusammenfassend sagen, dass es extrem aufwendig ist und für die meisten Anwendungsfälle auch eine unkomplizierte Methode über Instagram funktionieren würde. Ich würde daher im Normalfall über die Option "Einbetten" gehen, welche Instagram selber zu jedem Beitrag zur Verfügung stellt.
+                In diesem Zusammenhang lässt sich noch sagen, dass ich das Logo der Webseite selber erstellen musste, da die Seite zwangsweise veröffentlicht werden musste (zum Einbinden der Instagram-API). Aufrund der Veröffentlichung habe ich auch alle meine Quellen im Impressum angegeben.<br>
+                Das Verwenden der JavaScript-Bibliothek "jQuery" hat einwandfrei funktioniert. Ich würde diese jederzeit wieder verwenden.<br>
+                Im Nachhinein ist mir aufgefallen, dass ich mit einer besser unterteilten Ordnerstruktur hätte arbeiten sollen.<br>
+                Ich habe das Datenflussdiagramm vereinfacht gezeichnet. Da es so übersichtlicher ist habe ich nur alle Möglichkeiten von der Startseite ausgehend dargestellt. Natürlich kann ich von jeder der Seiten zu den anderen Seiten wechseln.<br>
                 <br>
             </article>
+            
+            <!-- Beinhaltet das Datenflussdiagramm -->
+            <div class="pictures">
+                <img id="flow" src="datenfluss.jpg">  
+            </div>
         </div>
     </div>
+
+    
+
 </body>
 
 </html>
