--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h3>Installationsbeschreibung</h3>
                 Es wurde Visual Studio Code mit folgenden Extensions verwendet:<br>
                 - "vscjava.vscode-java-debug"<br>
-                - "ritwickdey.liveserver"<br>
+                - "ritwickdey.liveserver"(nur zur Darstellung, unnötig)<br>
                 Außerdem wurde verwendet:<br>
                 - Dummy-Instagram-Account<br> 
                 - Facebook-Developer-Account<br>
