--- a/bunnys.html
+++ b/bunnys.html
@@ -25,7 +25,7 @@
         </div>    
     </header>
 
-    <!-- Inhalt -->
+    <!-- Inhalt, wird von API ausgefüllt -->
     <div class="container">
         <div class="content">
             <h2>Rudolf hat beim Kaninchen Füttern ein neues Bild gemacht!</h2>
