--- a/weather.html
+++ b/weather.html
@@ -31,7 +31,7 @@
         <input type="submit" value="Submit" class="submit">
     </div>
     
-    <!-- Antwort von API -->  
+    <!-- für Antwort von API -->  
     <div class="container">
         <div class="card" id="card">
             <h1 class="name" id="name"></h1>
